# storagy-project-docker

./: .dockerignore  .gitignore  Dockerfile  README.md  REAL_ROBOT.md  docker-compose.yml  real-robot.repos
docker/: rebuild_ws.sh  run_sim.sh
docs/: real-robot-debug-2026-06-25.md
src/motor_driver2/motor_driver2/: motor_driver2.py
src/storagy/: CMakeLists.txt  package.xml
src/storagy/launch/: bringup.launch.py  hardware_bringup.launch.py  parking_demo.launch.py  parking_nav.launch.py  parking_nodes.launch.py  parking_real.launch.py  simulation_bringup.launch.py  spawn_parked_cars.launch.py
src/storagy/launch/navigation2/: navigation2.launch.py
src/storagy/map/: mapname.json  parkinglot.pgm  parkinglot.yaml
src/storagy/models/parked_car/: model.config  model.sdf
src/storagy/param/: parking_spaces.yaml
src/storagy/param/navigation2/: storagy.yaml  storagy_parking.yaml
src/storagy/rviz/: parking.rviz
src/storagy/scripts/: auto_parking.py  clean_and_run_parking.sh  line_detector_node.py  parking_manager_node.py  run_parking_real.sh  slot_occupancy_node.py
src/storagy/urdf/: storagy.urdf
src/storagy/worlds/: parkinglot.sdf
